--- a/news.html
+++ b/news.html
@@ -95,7 +95,7 @@
 		        	<!--下面迴圈的output會寫到這-->
 		      </div>
 		    </div>
-		    			<!--		PIXNET API		-->
+		    			<!--		PIXNET API		aa-->
 	    	<script>
 	    			var xmlhttp = new XMLHttpRequest();
 						var url = "https://emma.pixnet.cc/mainpage/blog/categories/latest/19?page=1&per_page=10&api_version=2&format=json";
