--- a/news.html
+++ b/news.html
@@ -57,7 +57,10 @@
 		.divider{
 			border-top: 8px solid #F0131E;
   		border-radius: 0px;
-
+		}
+		.card-content{
+			height: 90px;
+			overflow:hidden;
 		}
 		
     </style>
