--- a/news.html
+++ b/news.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+    	<title>Latest Movie Reviews on PIXNET - Latest News</title>
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
