--- a/news.html
+++ b/news.html
@@ -168,7 +168,15 @@
 	          <div class="container">
 	            <div class="row">
 	              <div class="col l6 s12">
-	              	<a class="grey-text text-lighten-3" href="https://shopping.pchome.com.tw/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Marvel_Studios_2016_logo.svg/1280px-Marvel_Studios_2016_logo.svg.png" height="50%" width="50%"></a>
+	              	<a class="grey-text text-lighten-3" href="https://html5marvel.netlify.app/index.html" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Marvel_Studios_2016_logo.svg/1280px-Marvel_Studios_2016_logo.svg.png" height="50%" width="50%"></a>
+	              </div>
+	              <div class="col l6 s12">
+	              	<h4><b> Used Links </b></h4>
+	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1e9TeD5wSFUjVkAJ0L70okChWkf3vAP7tPug6pj3HSw0/">SpreadSheet Database</a>
+	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/forms/d/1L5fW6FJY3ZPsu--hFq_1ith_PYtKW_q3U1NY4INNCg8/">Google Form</a>
+	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1nmcICSRJ-1Bq7RQvjN9OCDpnJW78YJ7qQLTKmtwmxvo/">Google Form Response</a>
+	              	<a class="grey-text text-lighten-3" href="https://emma.pixnet.cc/mainpage/blog/categories/latest/19?page=1&per_page=16&api_version=2&format=json">PIXNET API json</a>
+
 	              </div>
 	            </div>
 	          </div>       
