--- a/about.html
+++ b/about.html
@@ -143,7 +143,9 @@
 										<i class="material-icons prefix">mode_edit</i>
 										<label for="name">MESSAGE</label><input type="text" name="message">
 									</div>
-									<input type="submit" value="Submit">
+									<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+								    <i class="material-icons right">send</i>
+								  </button>
 								</form>
 							</div>
 						</div>
