--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 		    	<div class="row" id="demo">
 		        	<!--下面迴圈的output會寫到這-->
 		      </div>
-		      <h5><b> Contact Us </b></h5>
+		      <h5><b> Leave a Message or Comment </b></h5>
 		      <div class="card">
 		      	<div class="container">
 		      		<div class="card-content">
@@ -130,7 +130,7 @@
 								<form name="form1" action="javascript:formresponse();">
 									<div data-role="fieldcontain">
 										<i class="material-icons prefix">account_circle</i>
-										<label for="name">YOUR NAME</label><input type="text" name="name">
+										<label for="name">YOUR NAME*</label><input type="text" name="name">
 									</div>
 									<div data-role="fieldcontain">
 										<i class="material-icons prefix">email</i>
@@ -141,11 +141,12 @@
 									</div>
 									<div data-role="fieldcontain">
 										<i class="material-icons prefix">mode_edit</i>
-										<label for="name">MESSAGE</label><input type="text" name="message">
+										<label for="name">MESSAGE*</label><input type="text" name="message">
 									</div>
 									<button class="btn waves-effect waves-light" type="submit" name="action">Submit
 								    <i class="material-icons right">send</i>
 								  </button>
+								  <p class="red-text">* required </p>
 								</form>
 							</div>
 						</div>
