--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 								<form name="form1" action="javascript:formresponse();">
 									<div data-role="fieldcontain">
 										<i class="material-icons prefix">account_circle</i>
-										<label for="name">YOUR NAME*</label><input type="text" name="name">
+										<label for="name">YOUR NAME<a class="red-text">*</a></label><input type="text" name="name">
 									</div>
 									<div data-role="fieldcontain">
 										<i class="material-icons prefix">email</i>
@@ -141,7 +141,7 @@
 									</div>
 									<div data-role="fieldcontain">
 										<i class="material-icons prefix">mode_edit</i>
-										<label for="name">MESSAGE*</label><input type="text" name="message">
+										<label for="name">MESSAGE<a class="red-text">*</a></label><input type="text" name="message">
 									</div>
 									<button class="btn waves-effect waves-light" type="submit" name="action">Submit
 								    <i class="material-icons right">send</i>
