--- a/news.html
+++ b/news.html
@@ -172,10 +172,10 @@
 	              </div>
 	              <div class="col l3 s12">
 	              	<h5><b> Used Links </b></h5>
-	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1e9TeD5wSFUjVkAJ0L70okChWkf3vAP7tPug6pj3HSw0/">SpreadSheet Database<br></a>
-	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/forms/d/1L5fW6FJY3ZPsu--hFq_1ith_PYtKW_q3U1NY4INNCg8/">Google Form<br></a>
-	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1nmcICSRJ-1Bq7RQvjN9OCDpnJW78YJ7qQLTKmtwmxvo/">Google Form Response<br></a>
-	              	<a class="grey-text text-lighten-3" href="https://emma.pixnet.cc/mainpage/blog/categories/latest/19?page=1&per_page=16&api_version=2&format=json">PIXNET API json<br></a>
+	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1e9TeD5wSFUjVkAJ0L70okChWkf3vAP7tPug6pj3HSw0/" target="_blank">SpreadSheet Database<br></a>
+	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/forms/d/1L5fW6FJY3ZPsu--hFq_1ith_PYtKW_q3U1NY4INNCg8/" target="_blank">Google Form<br></a>
+	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1nmcICSRJ-1Bq7RQvjN9OCDpnJW78YJ7qQLTKmtwmxvo/" target="_blank">Google Form Response<br></a>
+	              	<a class="grey-text text-lighten-3" href="https://emma.pixnet.cc/mainpage/blog/categories/latest/19?page=1&per_page=16&api_version=2&format=json" target="_blank">PIXNET API json<br></a>
 	              </div>
 	            </div>
 	          </div>       
