--- a/news.html
+++ b/news.html
@@ -171,7 +171,7 @@
 	              	<a class="grey-text text-lighten-3" href="https://html5marvel.netlify.app/index.html" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Marvel_Studios_2016_logo.svg/1280px-Marvel_Studios_2016_logo.svg.png" height="100%" width="100%"></a>
 	              </div>
 	              <div class="col l3 s12">
-	              	<h5><b> Used Links </b></h5>
+	              	<h5><b> Links </b></h5>
 	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1e9TeD5wSFUjVkAJ0L70okChWkf3vAP7tPug6pj3HSw0/" target="_blank">SpreadSheet Database<br></a>
 	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/forms/d/1L5fW6FJY3ZPsu--hFq_1ith_PYtKW_q3U1NY4INNCg8/" target="_blank">Google Form<br></a>
 	              	<a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1nmcICSRJ-1Bq7RQvjN9OCDpnJW78YJ7qQLTKmtwmxvo/" target="_blank">Google Form Response<br></a>
