--- a/about.html
+++ b/about.html
@@ -50,7 +50,6 @@
 				else{
 					var MySubmit = "https://docs.google.com/forms/d/e/1FAIpQLSeNn9YIVCYfaR0oU2zxMFz5m1dTFXCWccQzf5gTSce4XuftOA/formResponse?&entry.901983148="+name+"&entry.1927677035="+email+"&entry.215611022="+subject+"&entry.1797893750="+message+"&submit=Submit";
 					var NewOpen = window.open(MySubmit, "_blank", "width=500, height=500");
-					//location.reload(true/false);
 					document.forms['form1'].reset();
 				}
 			}
@@ -261,18 +260,25 @@
 	    </div>
     </body>
 	  
-	      <footer class="page-footer grey darken-4">
-	          <div class="container">
-	            <div class="row">
-	              <div class="col l6 s12">
-	              	<a class="grey-text text-lighten-3" href="https://shopping.pchome.com.tw/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Marvel_Studios_2016_logo.svg/1280px-Marvel_Studios_2016_logo.svg.png" height="50%" width="50%"></a>
-	              </div>
-	            </div>
-	          </div>       
-	          <div class="footer-copyright">
-	            <div class="container">
-	           		 © 2021 No Copyright NCHU HTML
-	            </div>
-	          </div>
-	       </footer>
+		<footer class="page-footer grey darken-4">
+	    <div class="container">
+	      <div class="row">
+	        <div class="col l3 s12">
+	          <a class="grey-text text-lighten-3" href="https://html5marvel.netlify.app/index.html" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Marvel_Studios_2016_logo.svg/1280px-Marvel_Studios_2016_logo.svg.png" height="100%" width="100%"></a>
+	        </div>
+	        <div class="col l3 s12">
+	          <h5><b> Links </b></h5>
+	          <a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1e9TeD5wSFUjVkAJ0L70okChWkf3vAP7tPug6pj3HSw0/" target="_blank">SpreadSheet Database<br></a>
+	          <a class="grey-text text-lighten-3" href="https://docs.google.com/forms/d/1L5fW6FJY3ZPsu--hFq_1ith_PYtKW_q3U1NY4INNCg8/" target="_blank">Google Form<br></a>
+	          <a class="grey-text text-lighten-3" href="https://docs.google.com/spreadsheets/d/1nmcICSRJ-1Bq7RQvjN9OCDpnJW78YJ7qQLTKmtwmxvo/" target="_blank">Google Form Response<br></a>
+	          <a class="grey-text text-lighten-3" href="https://emma.pixnet.cc/mainpage/blog/categories/latest/19?page=1&per_page=16&api_version=2&format=json" target="_blank">PIXNET API json<br></a>
+	        </div>
+	      </div>
+	    </div>       
+	    <div class="footer-copyright">
+	      <div class="container">
+	        © 2021 No Copyright NCHU HTML
+	      </div>
+	    </div>
+	  </footer>
   </html>
