--- a/about.html
+++ b/about.html
@@ -132,6 +132,7 @@
 										<label for="name">YOUR EMAIL</label><input type="text" name="email">
 									</div>
 									<div data-role="fieldcontain">
+										<i class="material-icons prefix">mode_edit</i>
 										<label for="name">SUBJECT</label><input type="text" name="subject">
 									</div>
 									<div data-role="fieldcontain">
