--- a/about.html
+++ b/about.html
@@ -227,8 +227,10 @@
 				 			let T = 
 				 					'<div class="col s12 m6>'+
 				 					'	<div class="card">'+
-				 					'		<h5> ' + data.getFormattedValue(i,1) + '</h5>'+
-				 					'		<p>'+ data.getFormattedValue(i, 4) + '</p>' +
+				 					'		<div class="card-content grey lighten-1">'+
+				 					'			<h5> ' + data.getFormattedValue(i,1) + '</h5>'+
+				 					'			<p>'+ data.getFormattedValue(i, 4) + '</p>' +
+				 					'		</div>'+
 				 					'	</div>'+
 				 					'</div>';
 
