--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
 				 					'	<div class="card">'+
 				 					'		<div class="card-content grey lighten-1">'+
 				 					'			<h5> ' + data.getFormattedValue(i,1) + '</h5>'+
-				 					'			<p>'+ data.getFormattedValue(i, 4) + '</p>' +
+				 					'			<span class="card-text">'+ data.getFormattedValue(i, 4) + '</span>' +
 				 					'		</div>'+
 				 					'	</div>'+
 				 					'</div>';
