--- a/about.html
+++ b/about.html
@@ -227,9 +227,9 @@
 				 			let T = 
 				 					'<div class="col s12 m6>'+
 				 					'	<div class="card">'+
-				 					'		<div class="card-content grey lighten-1">'+
-				 					'			<h5> ' + data.getFormattedValue(i,1) + '</h5>'+
-				 					'			<span class="card-text">'+ data.getFormattedValue(i, 4) + '</span>' +
+				 					'		<span class="card-title"> ' + data.getFormattedValue(i,1) + '</span>'+
+				 					'		<div class="card-content">'+
+				 					'			<p>'+ data.getFormattedValue(i, 4) + '</p>' +
 				 					'		</div>'+
 				 					'	</div>'+
 				 					'</div>';
