--- a/about.html
+++ b/about.html
@@ -83,8 +83,11 @@
 			.divider{
 				border-top: 8px solid #F0131E;
 	  		border-radius: 0px;
-
 			}
+				.card-content{
+			height: 90px;
+			overflow:hidden;
+		}
     </style>
     <!----------------------------------NAV BAR----------------------------------->
     	<nav class="nav-extended grey darken-4">
