--- a/about.html
+++ b/about.html
@@ -225,10 +225,10 @@
 			 			for(i = row-1; i >= 0 && counter < 5; i--){
 			 				counter++;
 				 			let T = 
-				 					'<div class="col s12 m6>'+
+				 					'<div class="col s12 m6 l2>'+
 				 					'	<div class="card">'+
-				 					'		<span class="card-title"> ' + data.getFormattedValue(i,1) + '</span>'+
 				 					'		<div class="card-content">'+
+				 					'		<span class="card-title"> ' + data.getFormattedValue(i,1) + '</span>'+
 				 					'			<p>'+ data.getFormattedValue(i, 4) + '</p>' +
 				 					'		</div>'+
 				 					'	</div>'+
