--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
 				 					'<div class="col s12 m6 l2>'+
 				 					'	<div class="card">'+
 				 					'		<div class="card-content">'+
-				 					'		<span class="card-title"> ' + data.getFormattedValue(i,1) + '</span>'+
+				 					'		<h5> ' + data.getFormattedValue(i,1) + '</h5>'+
 				 					'			<p>'+ data.getFormattedValue(i, 4) + '</p>' +
 				 					'		</div>'+
 				 					'	</div>'+
