--- a/about.html
+++ b/about.html
@@ -225,10 +225,10 @@
 			 			for(i = row-1; i >= 0 && counter < 5; i--){
 			 				counter++;
 				 			let T = 
-				 					'<div class="col s12 m6 l2>'+
+				 					'<div class="col s12 m6>'+
 				 					'	<div class="card">'+
 				 					'		<div class="card-content">'+
-				 					'		<h5> ' + data.getFormattedValue(i,1) + '</h5>'+
+				 					'		<h5><b> ' + data.getFormattedValue(i,1) + '</b></h5>'+
 				 					'			<p>'+ data.getFormattedValue(i, 4) + '</p>' +
 				 					'		</div>'+
 				 					'	</div>'+
